<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:key=""
    >

    <net.kdt.pojavlaunch.prefs.BackButtonPreference/>

    <!-- Landscape settings dashboard: shortcuts open the existing functional video preferences. -->
    <Preference
        android:key="oryn_dashboard_0"
        android:title="Global Renderer"
        android:summary="Choose the graphics renderer used by Minecraft"
        android:icon="@drawable/ic_px_image_renderer"
        android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceVideoFragment" />

    <Preference
        android:key="oryn_dashboard_1"
        android:title="Vulkan Driver"
        android:summary="Choose the supported Vulkan driver"
        android:icon="@drawable/ic_px_volcano"
        android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceVideoFragment" />

    <Preference
        android:key="oryn_dashboard_2"
        android:title="Graphics API"
        android:summary="Configure the graphics API and rendering options"
        android:icon="@drawable/ic_px_image_renderer"
        android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceVideoFragment" />

    <Preference
        android:key="oryn_dashboard_3"
        android:title="Resolution Rule"
        android:summary="Choose how the game resolution is calculated"
        android:icon="@drawable/ic_px_viewport_expand"
        android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceVideoFragment" />

    <Preference
        android:key="oryn_dashboard_4"
        android:title="Resolution Scale"
        android:summary="Change the resolution scale of the game"
        android:icon="@drawable/ic_px_resolution"
        android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceVideoFragment" />

    <PreferenceCategory
        android:title="@string/preference_category_main_categories"
        >

        <Preference
            android:key="video_screen_setting"
            android:title="@string/preference_video_title"
            android:summary="@string/preference_video_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceVideoFragment"
            android:icon="@drawable/ic_px_image"
            />

        <Preference
            android:key="control_screen_setting"
            android:title="@string/preference_control_title"
            android:summary="@string/preference_control_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceControlFragment"
            android:icon="@drawable/ic_px_gamepad"
            />

        <Preference
            android:key="java_screen_setting"
            android:title="@string/preference_java_title"
            android:summary="@string/preference_java_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceJavaFragment"
            android:icon="@drawable/ic_px_java"
            />

        <Preference
            android:key="misc_screen_setting"
            android:title="@string/preference_misc_title"
            android:summary="@string/preference_misc_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceMiscellaneousFragment"
            android:icon="@drawable/ic_px_alt_sliders"
            />


        <Preference
            android:key="experimental_screen_setting"
            android:title="@string/preference_experimental_title"
            android:summary="@string/preference_experimental_description"
            android:fragment="net.kdt.pojavlaunch.prefs.screens.LauncherPreferenceExperimentalFragment"
            android:icon="@drawable/ic_px_experiment"/>
    </PreferenceCategory>

    <SwitchPreference
        android:title="@string/preference_force_english_title"
        android:key="force_english"
        android:summary="@string/preference_force_english_description"
        android:icon="@drawable/ic_px_translate"/>

    <Preference
        android:title="@string/preference_ask_for_notification_title"
        android:summary="@string/preference_ask_for_notification_description"
        android:key="notification_permission_request"
        android:icon="@drawable/ic_px_bell"
        />





</PreferenceScreen>